--- a/trom/fr_cont.html
+++ b/trom/fr_cont.html
@@ -4,7 +4,7 @@
 <HEAD>
 	<META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=iso-8859-1">
 
-	<TITLE>FreeZoneAmerica: The Resolution of Mind</TITLE>
+	<TITLE>The Resolution of Mind</TITLE>
 </HEAD>
 
 <BODY BACKGROUND="whtmarb.jpg" TEXT="black" BGCOLOR="white" LINK="#0000EE" ALINK="red" VLINK="#551A8B">
