--- a/trom/index.htm
+++ b/trom/index.htm
@@ -8,9 +8,9 @@
 
 	<META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=iso-8859-1">
 
-<meta name="Description" content="FreeZone America: The Resolution of the Mind (TROM)">
+<meta name="Description" content="The Resolution of the Mind (TROM)">
 
-<meta name="KeyWords" content="Scientology, Dianetics, Hubbard, L. Ron Hubbard, LRH, Dennis Stephens, Church of Scientology, CoS, Co$, Free Zone, FreeZone, clearing, thetan, OT, trom, religion, philosophy, Xenu, auditing, auditor, e-meter">
+<meta name="KeyWords" content="Dennis Stephens, clearing, thetan, trom, philosophy, auditing, e-meter">
 
 
 
