--- a/trom/trom5.html
+++ b/trom/trom5.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
-
+	Dennis Stephens, clearing, thetan, trom, philosophy, auditing, e-meter
 <HEAD>
 	
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=iso-8859-1">
 <meta name="Description" content="The Resolution of Mind (TROM) - Part 5">
-<meta name="KeyWords" content="Scientology, Dianetics, Hubbard, L. Ron Hubbard, LRH, Dennis Stephens, Church of Scientology, CoS, Co$, Free Zone, FreeZone, clearing, thetan, OT, trom, religion, philosophy, Xenu, auditing, auditor, e-meter">
+<meta name="KeyWords" content="Dennis Stephens, clearing, thetan, trom, philosophy, auditing, e-meter">
 
 	<TITLE>The Resolution of Mind (TROM) - Part 5</TITLE>
 </HEAD>
@@ -374,7 +374,7 @@ influence him if his past is now in the present? Flip... See it?</P>
 <P>Commands:</P>
 
 <P>a) Select a past scene. Become simultaneously aware of the scene and pt around you. Don&#8217;t try and Timebreak
-all of the scene at once. Take it a bit at a time. Continue to do this until the past scent &#8216;fades&#8217; - i.e.. begins
+all of the scene at once. Take it a bit at a time. Continue to do this until the past scene &#8216;fades&#8217; - i.e.. begins
 to &#8216;fall away&#8217; in intensity compared to present time.</P>
 
 <P>b) Select a new past scene, and repeat a).</P>
