--- a/trom/intro.html
+++ b/trom/intro.html
@@ -5,7 +5,7 @@
 	
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=iso-8859-1">
 <meta name="Description" content="Dennis H. Stephens - Bio and Introduction">
-<meta name="KeyWords" content="Scientology, Dianetics, Hubbard, L. Ron Hubbard, LRH, Dennis Stephens, Church of Scientology, CoS, Co$, Free Zone, FreeZone, clearing, thetan, OT, trom, religion, philosophy, Xenu, auditing, auditor, e-meter">
+<meta name="KeyWords" content="Dennis Stephens, clearing, thetan, trom, philosophy, auditing, e-meter">
 
 	<TITLE>Dennis H. Stephens - Bio and Introduction</TITLE>
 </HEAD>
