* fix word 'objection' to 'objective'

--- a/trom/trom1.html
+++ b/trom/trom1.html
@@ -591,7 +591,7 @@ is importance; the unimportance comes out in the wash.</P>
 it in the hope that it will go away and leave him alone. The cycle has been:</P>
 <P>Mind considered as a series of past scenes.<BR>
 Mind considered as pictures of past scenes.<BR>
-Mind considered as memories, having no objection existence.<BR>
+Mind considered as memories, having no objective existence.<BR>
 Mind considered as configurations in the brain.</P>
 <P>The truth is that we have a being who can look at scenes. He can look at &#8216;now&#8217; scenes, and he can look at &#8216;then&#8217;
 scenes. The only difference is that &#8216;then&#8217; scenes are scenes of &#8216;then&#8217; and &#8216;now&#8217; scenes are scenes of &#8216;now&#8217;. If
