* typo; removed word 'made'

--- a/trom/trom1.html
+++ b/trom/trom1.html
@@ -117,7 +117,7 @@ when applied, have the ability to dissolve all games.</P>
 	</TR>
 	<TR>
 		<TD WIDTH="5%" VALIGN="TOP">2.</TD>
-		<TD WIDTH="95%" VALIGN="TOP">The postulate taking the effect out of existence, and the postulate that it shall be made not-known.</TD>
+		<TD WIDTH="95%" VALIGN="TOP">The postulate taking the effect out of existence, and the postulate that it shall be not-known.</TD>
 	</TR>
 	<TR>
 		<TD WIDTH="5%" VALIGN="TOP">3.</TD>
